Fix lists height on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,7 @@
     #button-wrapper {
       background-color: #232b2b;
       border-bottom: 3px solid 	#071e17;
+      height: 2em;
     }
     .active {
       border-color: #ef3f3f;
@@ -206,6 +207,7 @@ button:focus, button:active  {
   #button-wrapper {
     background-color: #ffeead;
     border-bottom: 3px solid #243447;
+    height: 2em;
   }
   .active {
     border-color: #ff6f69;
@@ -361,7 +363,6 @@ button:focus, button:active  {
 @media (max-width: 900px) {
   .app, .dark-mode .app{
     grid-template-columns: 100%;
-    grid-template-rows: 30% 70%;
     width: 100%;
     height: 100%;
     border: 0;
@@ -400,9 +401,13 @@ button:focus, button:active  {
     display: flex;
     justify-content: space-evenly;
     padding: 0.5em;
+    height: 2em;
   }
   .darkmode #list-toggle, #list-toggle {
     display: block;
+  }
+  #app-separator {
+    display: none;
   }
 }
 
